# beehive-placeholders

./: Cargo.toml  README.md
beelay/beelay/: Cargo.toml  README.md
beelay/beelay-cli/: Cargo.toml  README.md
beelay/beelay-cli/src/: main.rs
beelay/beelay-core/: Cargo.toml  README.md
beelay/beelay-core/src/: lib.rs
